--- a/calculations/linearized_equations.tex
+++ b/calculations/linearized_equations.tex
@@ -63,7 +63,6 @@ so $\nabla \cdot \bv_0 = 0$ and obviously $\nabla \cdot \bb_0 = 0$ and $\nabla \
 	f_1(u_1, u_2, u_3, t) = \widetilde{f_1}(u_1)\text{e}^{-i\omega t + ik_2u_2 + ik_3u_3}
 \end{equation}
 
-\newpage
 \subsection{Slab geometry}
 Below all tildes are dropped for convenience.
 \begin{equation}
@@ -93,21 +92,63 @@ Derivations in cylindrical coordinates, explicitly done to see how the scale fac
 		\omega \rho_1			&= -iv_1\rho_0' - i\rho_0\left(v_1' + \frac{v_1}{r} + \frac{1}{r}ik_2v_2 + ik_3v_3\right) + \left(\frac{1}{r}v_{02}k_2 + v_{03}k_3\right)\rho_1																									\\[8pt]
 		\omega \rho_0 v_1 &= -i\left(T_0\rho_1 + T_1\rho_0\right)' - i\frac{B_{03}'}{r}\left[(ra_2)' - ik_2a_1\right] + i\frac{(rB_{02})'}{r}\left(a_3' - ik_3a_1\right)																									\\
 											&~~~~ + iB_{03}\left\{k_3^2a_2 - \frac{1}{r}k_2k_3a_3 - \left[\frac{1}{r}\left((ra_2)' - ik_2a_1\right)\right]'\right\} + \left(\frac{v_{02}k_2}{r} + v_{03}k_3\right)\rho_0v_1									\\
-											&~~~~ - iB_{02}\left\{\frac{1}{r^2}k_2^2a_3 - k_2k_3a_2 + \frac{1}{r}\left[r\left(ik_3a_1 - a_3'\right)\right]'\right\} + i\frac{2}{r}\rho_0v_{02}v_2 + i\frac{1}{r}v_{02}^2\rho_1 - ig\rho_1		\\[8pt]
+											&~~~~ - iB_{02}\left\{\frac{1}{r^2}k_2^2a_3 - \frac{1}{r}k_2k_3a_2 + \frac{1}{r}\left[r\left(ik_3a_1 - a_3'\right)\right]'\right\} + i\frac{2}{r}\rho_0v_{02}v_2 + i\frac{1}{r}v_{02}^2\rho_1 - ig\rho_1		\\[8pt]
 		\omega \rho_0 v_2 &= \frac{1}{r}(T_0\rho_1 + \rho_0T_1)k_2 +\rho_0\left(\frac{1}{r}v_{02}k_2 + v_{03}k_3\right)v_2 + \frac{1}{r^2}(rB_{02})'(rk_3a_2 - k_2a_3)																										\\
 											&~~~~ + B_{03}\left[-ik_3^2a_1 + k_3a_3' + \frac{1}{r^2}k_2(ra_2)' - \frac{i}{r^2}k_2^2a_1\right] - i\rho_0\frac{1}{r}v_{02}v_1 - i\rho_0v_{02}'v_1																							\\[8pt]
-		\omega \rho_0 v_3 &= (T_0\rho_1 + \rho_0T_1)k_3 - B_{03}'\left(\frac{1}{r}k_2a_3 - k_3a_3\right) + iB_{02}\left[\frac{1}{r^2}ik_2(ra_2)' - \frac{1}{r^2}ik_2a_1 + k_3^2a_1 + ik_3a_3'\right]											\\
-											&~~~~ + \rho_0\left(\frac{1}{r}k_2v_{02} + k_3v_{03}\right) - i\rho_0v_{03}'v_1																																																									\\[8pt]
+		\omega \rho_0 v_3 &= (T_0\rho_1 + \rho_0T_1)k_3 - B_{03}'\left(\frac{1}{r}k_2a_3 - k_3a_2\right) + iB_{02}\left[\frac{1}{r^2}ik_2(ra_2)' + \frac{1}{r^2}k_2^2a_1 + k_3^2a_1 + ik_3a_3'\right]											\\
+											&~~~~ + \rho_0\left(\frac{1}{r}k_2v_{02} + k_3v_{03}\right)v_3 - i\rho_0v_{03}'v_1																																																							\\[8pt]
 		\omega \rho_0 T_1 &= -i\rho_0v_1T_0' +\rho_0\left(\frac{1}{r}k_2v_{02} + k_3v_{03}\right)T_1 - i(\gamma - 1)\rho_0T_0\left[\frac{1}{r}(rv_1)' + \frac{1}{r}ik_2v_2 + ik_3v_3\right]																\\
 											&~~~~ - i(\gamma - 1)(\kappa_\parallel - \kappa_\bot)\frac{1}{B^2}\left(\frac{1}{r}k_2B_{02} + k_3B_{03}\right)^2T_1 + i(\gamma - 1)\frac{1}{r}(\kappa_\bot T_1')'															\\
 											&~~~~ - i(\gamma - 1)\kappa_\bot\left(\frac{1}{r^2}k_2^2 + k_3^2\right)T_1 + i(\gamma - 1)\frac{1}{r}(r\kappa_{\bot, 1}T_0')'																																		\\
 											&~~~~ + i(\gamma - 1)(\kappa_\bot - \kappa_\parallel)\frac{1}{B^2}\left[(B_{03}k_3^2 + B_{02}k_2k_3)a_2 - \frac{1}{r}(B_{02}k_2^2 + B_{03}k_2k_3)a_3\right]																			\\
 											&~~~~ - i(\gamma - 1)\rho_1\HL_0 - i(\gamma - 1)\rho_0(\HL_T T_1 + \HL_\rho \rho_1)																																																							\\[8pt]
-		\omega a_1				&= iB_{03}v_2 - iB_{02}v_3 + iv_{02}a_2' + iv_{03}a_3' + \left(\frac{1}{r}k_2v_{02} + k_3v_{03}\right)a_1 + \frac{1}{r}v_{02}a_2																																\\[8pt]
+		\omega a_1				&= iB_{03}v_2 - iB_{02}v_3 + iv_{02}a_2' + iv_{03}a_3' + \left(\frac{1}{r}k_2v_{02} + k_3v_{03}\right)a_1 + i\frac{1}{r}v_{02}a_2																																\\[8pt]
 		\omega a_2				&= -iB_{03}v_1 - \left(\frac{1}{r}k_2a_3 - k_3a_2\right)v_{03}																																																																	\\[8pt]
 		\omega a_3				&=  iB_{02}v_1 - \left(k_3a_2 - \frac{1}{r}k_2a_3\right)v_{02}
 	\end{aligned}
 \end{equation}
+
+\newpage
+\subsection{Introducing the scale factor}
+Now take the scale factor $h = r$, where $h = 1$ in Cartesian coordinates and $h' = 0$. Apply the following transformation to the perturbed quantities:
+\begin{alignat*}{4}
+	h\rho_1 &= \widetilde{\rho_1}		\qquad&		ihv_1 &= \widetilde{v_1}		\qquad&		v_2 	&= \widetilde{v_2}		\qquad&			hv_3 &= \widetilde{v_3}			\\
+	hT_1		&= \widetilde{T_1}			&					a_1   &= \widetilde{a_1}					&		iha_2	&= \widetilde{a_2}					&			ia_3 &= \widetilde{a_3}
+\end{alignat*}
+Tildes are dropped below for convenience.
+\begin{equation}
+	\begin{aligned}
+		\omega \frac{\rho_1}{h}			&= -\frac{1}{h}\rho_0'v_1 - \frac{1}{h}\rho_0\left(v_1' - k_2v_2 - k_3v_3\right) + \frac{1}{h}\left(\frac{1}{h}v_{02}k_2 + v_{03}k_3\right)\rho_1																																		\\[8pt]
+		\omega \rho_0 \frac{v_1}{h} &= \left(\frac{T_0\rho_1 + \rho_0 T_1}{h}\right)' + \frac{1}{h}B_{03}'\left(a_2' - k_2a_1\right) - \frac{(hB_{02})'}{h}\left(a_3' - k_3a_1\right)																																		\\
+																&~~~~ - B_{03}\left\{\frac{k_3^2}{h}a_2 - \frac{k_2k_3}{h}a_3 - \left[\frac{1}{h}\left(a_2' - k_2a_1\right)\right]'\right\} + \frac{1}{h}\left(\frac{v_{02}k_2}{h} + v_{03}k_3\right)\rho_0v_1											\\
+																&~~~~ + B_{02}\left\{\frac{k_2^2}{h^2}a_3 - \frac{k_2k_3}{h^2}a_2 - \frac{1}{h}\left[h\left(a_3' - k_3a_1\right)\right]'\right\} - 2\frac{h'}{h}\rho_0v_{02}v_2 - \frac{h'}{h^2}v_{02}^2\rho_1 + \frac{1}{h}g\rho_1	\\[8pt]
+		\omega \rho_0 v_2						&= \frac{1}{h^2}(T_0\rho_1 + \rho_0T_2)k_2 + \rho_0\left(\frac{1}{h}k_2v_{02} + k_3v_{03}\right)v_2 + \frac{1}{h^2}(rB_{02})'\left(k_3a_2 - k_2a_3\right)																														\\
+																&~~~~ + B_{03}\left[-\left(k_3^2 + \frac{k_2^2}{h^2}\right)a_1 + \frac{k_2}{h^2}a_2' + k_3a_3'\right] - \frac{1}{h^2}\rho_0(hv_{02})'v_1																																						\\[8pt]
+		\omega \rho_0 \frac{v_3}{h} &= \frac{1}{h}(T_0 \rho_1 + \rho_0 T_1)k_3 + \frac{1}{h}\rho_0\left(\frac{1}{h}k_2v_{02} + k_3v_{03}\right)v_3 + \frac{1}{h}B_{03}'\left(k_3a_2 - k_2a_3\right) 																										\\
+																&~~~~ - B_{02}\left[-\left(k_3^2 + \frac{k_2^2}{h^2}\right)a_1 + \frac{k_2}{h^2}a_2' + k_3a_3'\right] - \frac{1}{h}\rho_0v_{03}'v_1																																									\\[8pt]
+		\omega \rho_0 \frac{T_1}{h}	&= -\frac{1}{h}\rho_0T_0'v_1 + \frac{1}{h}\rho_0\left(\frac{k_2}{h}v_{02} + k_3v_{03}\right)T_1 - (\gamma - 1)\frac{1}{h}\rho_0T_0\left(v_1' - k_2v_2 - k_3v_3\right)																							  \\
+																&~~~~ - i(\gamma - 1)\frac{(\kappa_\parallel - \kappa_\bot)}{h}\frac{1}{B^2}\left(\frac{k_2}{h}B_{02} + k_3B_{03}\right)T_1 + i(\gamma - 1)\frac{1}{h}\left[\kappa_\bot\left(\frac{T_1}{h}\right)'\right]'					\\
+																&~~~~ - i(\gamma - 1)\frac{\kappa_\bot}{h}\left(\frac{k_2^2}{h^2} + k_3^2\right)T_1 + i(\gamma - 1)\frac{1}{h}\left(h\kappa_{\bot, 1}T_0'\right)'																																		\\
+																&~~~~ + i(\gamma - 1)\frac{(\kappa_\bot - \kappa_\parallel)}{h}\frac{1}{B^2}\left[\left(k_2k_3B_{02} + k_3^2B_{03}\right)a_2 - \left(k_2^2B_{02} + k_2k_3B_{03}\right)a_3\right]																		\\
+																&~~~~ - i(\gamma - 1)\HL_0\frac{1}{h}\rho_1 - i(\gamma - 1)\frac{1}{h}\rho_0\left(\HL_T T_1 + \HL_\rho \rho_1\right)																																																\\[8pt]
+		\omega a_1									&= -B_{03}v_2 + \frac{1}{h}B_{02}v_3 - \frac{1}{h}v_{02}a_2' - v_{03}a_3' + \left(\frac{k_2}{h}v_{02} + k_3v_{03}\right)a_1																																													\\[8pt]
+		\omega \frac{a_2}{h}				&= -\frac{1}{h}B_{03}v_1 - \frac{1}{h}\left(k_2a_3 - k_3a_2\right)v_{03}																																																																						\\[8pt]
+		\omega a_3									&= \frac{1}{h}B_{02}v_1 + \frac{1}{h}\left(k_2a_3 - k_3a_2\right)v_{02}																				
+	\end{aligned}
+\end{equation}
+
+\newpage
+\subsubsection{Change in thermal conduction tensor}
+The linearized part of the thermal conduction tensor in cylindrical coordinates is given by
+\begin{equation}
+	\kappa_{\bot, 1} = \frac{\partial \kappa_\bot}{\partial T}T_1 + \frac{\partial \kappa_\bot}{\partial \rho}\rho_1 + 2\left(B_{02}B_\theta + B_{03}B_z\right)\frac{\partial \kappa_\bot}{\partial(B^2)}
+\end{equation}
+Applying the transformations for the perturbed variables and introducing the vector potential for $B_1$, this can be rewritten as
+\begin{equation}
+	h\kappa_{\bot, 1} = \frac{\partial \kappa_\bot}{\partial T}T_1 + \frac{\partial \kappa_\bot}{\partial \rho}\rho_1 - 2hB_{02}\left(a_3' - k_3a_1\right)\frac{\partial \kappa_\bot}{\partial (B^2)}
+											+ 2B_{03}\left(a_2' - k_2a_1\right)\frac{\partial \kappa_\bot}{\partial (B^2)}
+\end{equation}
+which can be substituted in the above equations.
 
 
 
